[package]
name = "dlyt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
which = "4"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
